--- a/src/css/base.css
+++ b/src/css/base.css
@@ -3,21 +3,19 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Open sans';
-  background: #a7c1f1;
+  background: #F6E969;
   color: #444444;
   font-size: 1.2em;
   position: relative;
 }
 
-.page-background {
+/*.page-background {
   position: absolute;
   width: 100%;
   top: 0;
   background: url("/src/images/feud76.png") no-repeat;
   background-position: center;
-  /* background-size: 300px 300px; */
-  /* z-index: 2;  */
-}
+}*/
 
 .header {
   display: flex;
@@ -27,8 +25,9 @@ body {
 }
 
 .header img {
-  height: 100px;
+  width: 200px;
   padding: 15px;
+  margin: 50px 0px 0px 0px;
 }
 
 .main {
@@ -50,7 +49,7 @@ body {
 }
 
 .player-area {
-  border: 1px solid gray;
+  /*border: 1px solid gray;*/
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -61,7 +60,7 @@ body {
 }
 
 .answer-area {
-  border: 3px solid #cd6161;
+  border: 5px solid #cd6161;
   border-radius: 5px;
   width: 500px;
   margin: 20px 30px;
@@ -69,10 +68,10 @@ body {
 }
 
 .answer-card {
-  border: 3px solid lightgray;
+  border: 3px solid white;
   border-radius: 2px;
   /* background: linear-gradient(lightblue, blue); */
-  background: darkblue;
+  background: #88C4CB;
   color: white;
   font-size: 1.2em;
   text-transform: uppercase;
